# oop-labs

lab_1/: CMakeLists.txt  main.cpp  task.hpp  tests.cpp
lab_2/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  hex.cpp  hex.h  main  main.cpp  test.cpp  test_zero  vector.cpp  vector.h
lab_2/include/: Hex.h
lab_2/src/: main.cpp
lab_2/tests/: tests.cpp
lab_3/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  coord.cpp  figure.cpp  figure_array.cpp  hexagon.cpp  main  main.cpp  octagon.cpp  test.cpp  test_zero  triangle.cpp
lab_3/include/: Figure.h  Octagon.h  Square.h  Triangle.h  coord.h  figure.h  figure_array.h  hexagon.h  octagon.h  triangle.h
lab_3/src/: main.cpp
lab_3/tests/: tests.cpp
lab_4/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  main  main.cpp  test.cpp  test_zero
lab_4/include/: auxiliary.hpp  coord.h  figure.h  figure.hpp  figure_array.h  figure_array.hpp  hexagon.h  octagon.h  octagon.hpp  point.hpp  square.hpp  triangle.h  triangle.hpp
lab_5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  main  main.cpp  test.cpp  test_zero
lab_5/include/: allocate.h  allocator.hpp  dynamic_array.hpp  vector.h
lab_5/src/: main.cpp
lab_6/: CMakeLists.txt
lab_6/include/: factory.hpp  npc.hpp  orc.hpp  slaver.hpp  visitor.hpp
lab_6/lib/: druid.cpp  npc.cpp  orc.cpp  slaver.cpp
lab_6/src/: npc.cpp  visitor.cpp
lab_7/include/: factory.hpp  npc.hpp  orc.hpp  slaver.hpp  visitor.hpp
lab_7/lib/: orc.cpp  slaver.cpp
lab_7/src/: main.cpp
